--- a/index.html
+++ b/index.html
@@ -5,46 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Floor Plan Sketcher</title>
   <style>
-    :root{--ink:#111;--mut:#666;--bg:#f6f7fb;--card:#fff;--pri:#4f46e5;--note:#0ea5e9}
+    :root{--ink:#111;--mut:#666;--bg:#f6f7fb;--card:#fff;--pri:#4f46e5;--note:#0ea5e9;--header-position:sticky;--header-gap:.75rem;--wrap-direction:row;--wrap-padding:.75rem;--aside-width:300px;--aside-max-height:calc(100vh - 140px);--aside-order:0;--aside-padding:.9rem;--panel-order:0;--panel-height:auto;--canvas-min-height:60vh;--control-padding:.4rem .75rem;--control-font-size:1rem}
     *{box-sizing:border-box}
     html,body{height:100%}
     body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu;background:var(--bg);color:var(--ink);display:flex;flex-direction:column;min-height:100vh}
-    header{position:sticky;top:0;z-index:10;background:rgba(255,255,255,.9);backdrop-filter:saturate(180%) blur(8px);border-bottom:1px solid #e5e7eb;padding:.5rem .75rem;display:flex;align-items:center;gap:.75rem;flex-wrap:wrap}
+    header{position:var(--header-position);top:0;z-index:10;background:rgba(255,255,255,.9);backdrop-filter:saturate(180%) blur(8px);border-bottom:1px solid #e5e7eb;padding:.5rem .75rem;display:flex;align-items:center;gap:var(--header-gap);flex-wrap:wrap}
     .row{display:flex;gap:.5rem;align-items:center}
     .right{margin-left:auto}
-    button,label.btn{border:1px solid #d1d5db;border-radius:999px;background:#fff;padding:.4rem .75rem;cursor:pointer;font:inherit;transition:background .2s,border-color .2s,color .2s;touch-action:manipulation}
+    button,label.btn{border:1px solid #d1d5db;border-radius:999px;background:#fff;padding:var(--control-padding);cursor:pointer;font:inherit;font-size:var(--control-font-size);transition:background .2s,border-color .2s,color .2s;touch-action:manipulation}
     button:active{transform:translateY(1px)}
     button.on{background:var(--pri);border-color:var(--pri);color:#fff}
     label.btn{display:inline-flex;align-items:center;gap:.35rem}
     #clearProjectBtn{border-color:#f87171;background:#fee2e2;color:#b91c1c}
     #clearProjectBtn:hover{background:#fecaca}
-    .wrap{flex:1;display:flex;gap:.75rem;padding:.75rem;min-height:0}
-    aside{width:300px;min-width:260px;background:var(--card);border-radius:16px;padding:.9rem;box-shadow:0 8px 30px rgba(0,0,0,.06);display:flex;flex-direction:column;gap:.75rem;max-height:calc(100vh - 140px);overflow:auto}
-    .panel{background:var(--card);border-radius:16px;box-shadow:0 8px 30px rgba(0,0,0,.06);position:relative;overflow:hidden;display:flex;flex-direction:column;min-height:0}
+    .wrap{flex:1;display:flex;gap:.75rem;padding:var(--wrap-padding);min-height:0;flex-direction:var(--wrap-direction)}
+    aside{width:var(--aside-width);min-width:260px;background:var(--card);border-radius:16px;padding:var(--aside-padding);box-shadow:0 8px 30px rgba(0,0,0,.06);display:flex;flex-direction:column;gap:.75rem;max-height:var(--aside-max-height);overflow:auto;order:var(--aside-order)}
+    .panel{background:var(--card);border-radius:16px;box-shadow:0 8px 30px rgba(0,0,0,.06);position:relative;overflow:hidden;display:flex;flex-direction:column;min-height:0;order:var(--panel-order);height:var(--panel-height)}
     .list{overflow:auto}
     .item{border:1px solid #e5e7eb;border-radius:12px;padding:.45rem .6rem;margin:.35rem 0;display:flex;flex-direction:column;gap:.4rem}
     .item.active{border-color:#6366f1;background:#eef2ff}
     input.text{border:none;outline:none;font:inherit;width:100%;background:transparent}
     .meta{color:var(--mut);font-size:.8rem}
-    .canvas{flex:1;min-height:60vh}
+    .canvas{flex:1;min-height:var(--canvas-min-height)}
     .hud{position:absolute;left:8px;right:8px;bottom:8px;background:rgba(255,255,255,.92);border:1px solid #e5e7eb;border-radius:12px;padding:.35rem .65rem;display:flex;justify-content:space-between;align-items:center;gap:.5rem;flex-wrap:wrap}
     small.mono{font-family:ui-monospace, SFMono-Regular, Menlo, monospace;color:#555;white-space:nowrap}
     textarea.notes{width:100%;min-height:120px;border:1px solid #d1d5db;border-radius:12px;padding:.6rem;font:inherit;resize:vertical;background:#fff;box-shadow:inset 0 1px 2px rgba(15,23,42,.08)}
     footer{color:#777;font-size:.8rem;padding:.5rem;text-align:center}
 
     @media (max-width: 960px){
-      header{position:static;justify-content:flex-start}
-      .wrap{flex-direction:column}
-      aside{width:100%;max-height:initial;order:2}
-      .panel{order:1;height:auto}
-      .canvas{min-height:50vh}
+      :root{--header-position:static;--wrap-direction:column;--aside-width:100%;--aside-max-height:none;--aside-order:2;--panel-order:1;--panel-height:auto;--canvas-min-height:50vh}
     }
 
     @media (max-width:600px){
-      header{gap:.5rem}
-      button,label.btn{padding:.35rem .6rem;font-size:.9rem}
-      .wrap{padding:.5rem}
-      aside{padding:.75rem}
+      :root{--header-gap:.5rem;--control-padding:.35rem .6rem;--control-font-size:.9rem;--wrap-padding:.5rem;--aside-padding:.75rem}
     }
   </style>
 </head>
